--- a/configs.dev.env
+++ b/configs.dev.env
@@ -3,7 +3,7 @@
 # ------------------------------------------------------------------------------
 
 GR__APP__RANDOM_SEED="42"
-GR__APP__OPERATION_MODE="Web"
+GR__APP__OPERATION_MODE="Text"
 
 # ------------------------------------------------------------------------------
 # Configs for galaxyraiders.core.game.SpaceShip
@@ -20,8 +20,8 @@ GR__CORE__GAME__SPACE_FIELD__MISSILE_MASS="1.0"
 GR__CORE__GAME__SPACE_FIELD__MISSILE_DISTANCE_FROM_SHIP="0.1"
 
 GR__CORE__GAME__SPACE_FIELD__ASTEROID_MAX_YAW="0.5"
-GR__CORE__GAME__SPACE_FIELD__ASTEROID_MIN_SPEED="1.0"
-GR__CORE__GAME__SPACE_FIELD__ASTEROID_MAX_SPEED="2.0"
+GR__CORE__GAME__SPACE_FIELD__ASTEROID_MIN_SPEED="0.25"
+GR__CORE__GAME__SPACE_FIELD__ASTEROID_MAX_SPEED="1.0"
 
 GR__CORE__GAME__SPACE_FIELD__ASTEROID_MIN_RADIUS="1"
 GR__CORE__GAME__SPACE_FIELD__ASTEROID_MAX_RADIUS="4"
@@ -31,6 +31,8 @@ GR__CORE__GAME__SPACE_FIELD__ASTEROID_MIN_MASS="5"
 GR__CORE__GAME__SPACE_FIELD__ASTEROID_MAX_MASS="10"
 GR__CORE__GAME__SPACE_FIELD__ASTEROID_MASS_MULTIPLIER="100.0"
 
+GR__CORE__GAME__SPACE_FIELD__EXPLOSION_DURATION="1000"
+GR__CORE__GAME__SPACE_FIELD__EXPLOSION_RADIUS="2.0"
 # ------------------------------------------------------------------------------
 # Configs for galaxyraiders.core.game.GameEngine
 # ------------------------------------------------------------------------------
@@ -41,6 +43,7 @@ GR__CORE__GAME__GAME_ENGINE__SPACEFIELD_WIDTH="54"
 GR__CORE__GAME__GAME_ENGINE__SPACEFIELD_HEIGHT="36"
 
 GR__CORE__GAME__GAME_ENGINE__ASTEROID_PROBABILITY="0.05"
+
 
 GR__CORE__GAME__GAME_ENGINE__COEFFICIENT_RESTITUTION="1.0"
 
